--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,7 @@ nbdist/
 .nb-gradle/
 nbactions.xml
 
+### Project specific exceptions: ###
+*.props
 
 # End of https://www.gitignore.io/api/java,netbeans
